# fastapifromzero

./: .env.test  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 08dcc1b8417b_criar_tabela_de_usuários.py  f875bd803f47_cria_tabela_de_sessions.py  febe702f05f2_create_tasks_table.py
tests/: conftest.py  test_api_add_tasks.py  test_api_list_tasks.py  test_api_status.py  test_core_api_status.py  test_db_connection.py  test_db_tasks.py
tests/accounts/: test_api_auth_whoami.py
tests/base/: test_api_status.py  test_db_connection.py
tests/core/: test_api_add_tasks.py  test_api_geral_tasks.py  test_api_list_tasks.py
todo/: cli.py  create_db.py  database.py  exceptions.py  main.py  settings.py
todo/models/: core.py  users.py
todo/routers/: __init__.py  accounts.py  auth.py  base.py  core.py  users.py
todo/schemas/: accounts.py  base.py  core.py  users.py
todo/services/: auth_service.py  tasks_service.py  users_service.py
