[tool.poetry]
name = "todo"
version = "0.1.0"
description = "FastAPI Todo example"
authors = ["Roger Camargo <huogerac@gmail.com>"]
readme = "README.md"
packages = [{include = "todo"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
httpx = "^0.27.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.flake8]
max-line-length = 120
exclude = '.venv/, migrations, .git, __pycache__, postgres_data'

[tool.pytest.ini_options]
addopts = "-x -vv --ignore=postgres_data"
python_files = [
    "test*.py",
    "*tests.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
exclude = [
    "postgres_data"
]