[tool.poetry]
name = "todo"
version = "0.1.0"
description = "FastAPI Todo example"
authors = ["Roger Camargo <huogerac@gmail.com>"]
readme = "README.md"
packages = [{include = "todo"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.24.0"
typer = "^0.12.3"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
httpx = "^0.27.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
mock = "^5.1.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.scripts]
shell = "todo.cli:main"

[tool.black]
line-length = 120
target_version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
exclude = [
    '.venv/', 'migrations', '.git', '__pycache__', 'postgres_data', 'tests', 
]

[tool.pytest.ini_options]
addopts = "-x -vv --ignore=postgres_data --ignore=postgres_data_test"
python_files = [
    "test*.py",
    "*tests.py",
]
env_override_existing_values = 1
env_files = [
    ".env",
    ".env.test",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
exclude = [
    "postgres_data",
    "postgres_data_test",
]